Engadida opción para iniciar iconizado e pequena refactorización

--- a/ProxyON/App.config
+++ b/ProxyON/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <appSettings>
+    <add key="iconizado" value="false"/>
     <add key="servidor" value="127.0.0.1"/>
     <add key="porto" value="80"/>
     <add key="excepcions" value="*.es;"/>
