Cambiado método de lectura/escritura dos ficheiros XML a serialize e corrixidos erros ó cargar os datos

--- a/ProxyON/App.config
+++ b/ProxyON/App.config
@@ -7,7 +7,8 @@
     <add key="perfiles" value="Perfiles"/>
     <add key="iconizado" value="false"/>
     <add key="perfilSelecionado" value=""/>
-    
+
+    <add key="nome" value="Por defecto"/>
     <add key="servidor" value="127.0.0.1"/>
     <add key="porto" value="80"/>
     <add key="excepcions" value="*.es;"/>
