Engadida selección de Perfil por defecto

--- a/ProxyON/App.config
+++ b/ProxyON/App.config
@@ -6,7 +6,7 @@
   <appSettings>
     <add key="perfiles" value="Perfiles"/>
     <add key="iconizado" value="false"/>
-    <add key="perfilSelecionado" value=""/>
+    <add key="perfilPorDefecto" value=""/>
 
     <add key="nome" value="Por defecto"/>
     <add key="servidor" value="127.0.0.1"/>
