Solucionado bug co inicio de windows

--- a/ProxyON/App.config
+++ b/ProxyON/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <appSettings>
-    <add key="perfiles" value="Perfiles"/>
+    <add key="perfiles" value=""/>
     <add key="iconizado" value="false"/>
     <add key="perfilPorDefecto" value=""/>
 
